--- a/app/views/main.html
+++ b/app/views/main.html
@@ -19,7 +19,7 @@
          analytics-label="contact">Contact</a>
     </li>
   </ul>
-  <h3 class="text-muted">test ga gtm</h3>
+  <h3 class="text-muted">test ga only</h3>
 </div>
 
 <div class="jumbotron">
